# names-and-faces

./: .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  models.py
app/routes/: deck.py  import_csv.py  people.py  scraper.py
app/services/: deck_generator.py  images.py  llm.py
app/services/card_templates/: card.html  style.css
app/templates/: base.html  import_csv.html  import_csv_preview.html  index.html  person_form.html
scripts/: get-linkedin-cookie.sh  install-launchd.sh  optimize-images.py  uninstall-launchd.sh
